Fix all of the issues for the 3.3 UX Hit List
* Portal mode job header
* Move edit buttons to beginning of action buttons
* Dashboard job row spacing
* Decrease toggle button height
* Remove extra scrollbars from job results standard out

--- a/awx/ui/client/features/output/_index.less
+++ b/awx/ui/client/features/output/_index.less
@@ -135,6 +135,7 @@
         border-radius: 0;
         border-bottom-right-radius: 4px;
         border-bottom-left-radius: 4px;
+        max-height: ~"calc(100vh - 350px)";
 
         & > table {
             table-layout: fixed;
@@ -300,7 +301,7 @@
     display: grid;
     grid-gap: 20px;
     grid-template-columns: minmax(300px, 1fr) minmax(500px, 2fr);
-    grid-template-rows: minmax(500px, ~"calc(100vh - 140px)");
+    grid-template-rows: minmax(500px, ~"calc(100vh - 130px)");
 
     .at-Panel {
         overflow-y: scroll;
