--- a/awx/ui/client/src/home/dashboard/lists/dashboard-list.block.less
+++ b/awx/ui/client/src/home/dashboard/lists/dashboard-list.block.less
@@ -61,7 +61,7 @@
 
 .DashboardList-tableHeader--actions {
     border-top-right-radius: 5px;
-    width: 90px;
+    width: 110px;
     padding-right: 15px;
     text-align: right;
 }
